# passm

./: .gitignore  CMakeLists.txt  compile_commands.json
.cache/clangd/index/: main.cc.840901B9A9FEFDB6.idx  menu.cc.4273A2BC559B7C1C.idx  menu.h.7EA3F88BAD1EB5FF.idx  user.cc.7F68F1FD719068B3.idx  user.h.8CC8BC2B52D4B6EA.idx
include/: binary_serialize.h  category.h  entry.h  file_utils.h  menu.h  pass_utils.h  passwd_entry.h  serializer.h  sys_utils.h  user.h  user_entry.h
include/core/: binary_serialize.h  category.h  entry.h  passwd_entry.h  user_entry.h
include/gui/: gui.h  menu.h
include/utils/: initialize.h  pass_utils.h  sys_utils.h
src/: binary_serialize.cc  entry.cc  main.cc  menu.cc  passwd_entry.cc  serializer.cc  user.cc  user_entry.cc
src/core/: binary_serialize.cc  entry.cc  passwd_entry.cc  user_entry.cc
src/gui/: gui.cc  menu.cc
